--- a/index.html
+++ b/index.html
@@ -9,13 +9,14 @@
 </head>
 <body>
     <header>
-        <h1>About Me</h1>
+        <h1>A Test Page by Marm</h1>
     </header>
     <main>
         <div class="tab">
             <button class="tablinks" onclick="openTab(event, 'intro')">Disclaimer</button>
+            <button class="tablinks" onclick="openTab(event, 'interests')">Interesting Stuff</button>
+            <button class="tablinks" onclick="openTab(event, 'music')">Music</button>
             <button class="tablinks" onclick="openTab(event, 'food stuff')">Food Stuff</button>
-            <button class="tablinks" onclick="openTab(event, 'projects')">Music</button>
         </div>
         <div id="intro" class="tabcontent">
             <h2>Disclaimer</h2>
@@ -33,14 +34,24 @@
             <img src="./curry/marmite.jpg">
             <p>I'm out of things to say, to be completely honest.</p>
         </div>
-        <div id="projects" class="tabcontent" style="display: none;">
+        <div id="music" class="tabcontent" style="display: none;">
             <h2>Muzak, as the Kids Say.</h2>
             <br>
             <p>Yeah. A spotify playlist, for your consideration.</p>
             <iframe style="border-radius:12px" src="https://open.spotify.com/embed/playlist/0cEM1Bx8uhePDGcMmPPTFe?utm_source=generator" width="80%" height="500" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy"></iframe>
             <br>
             <br>
-            <h2>
+            <h2>This goes hard.</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/Qr0WT-3TiZ4?si=S4Q-iY0lM93PN-7y" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        </div>
+	<div id="interests" class="tabcontent" style="display: none;">
+        <h2>I've collected some interesting videos and pictures here.</h2>
+        <p>Liquid propane:</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/cW1I_4htjT0?si=HYvEv-radYGx-ujF" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>Sprint Missile:</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/QiyldgYKy_U?si=NRSyiW5RKYK0kHfx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+        <p>Project Orion test with chemical explosives:</p>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/Q8Sv5y6iHUM?si=JKU34EcM_K-PmAMP&amp;start=128" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         </div>
     </main>
     <footer>
