--- a/index.html
+++ b/index.html
@@ -52,7 +52,9 @@
         <iframe width="560" height="315" src="https://www.youtube.com/embed/QiyldgYKy_U?si=NRSyiW5RKYK0kHfx" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
         <p>Project Orion test with chemical explosives:</p>
         <iframe width="560" height="315" src="https://www.youtube.com/embed/Q8Sv5y6iHUM?si=JKU34EcM_K-PmAMP&amp;start=128" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
-        </div>
+	<p>Triethylaluminum-triethylborane ignition fluid making a scale model of SLS have green exhaust during a test.</p>
+        <img src="./curry/boron.jpg">
+	</div>
     </main>
     <footer>
         <p>&copy; 2024 Marm. All rights reserved.</p>
