--- a/part2.html
+++ b/part2.html
@@ -4,7 +4,71 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Me</title>
-    <link rel="stylesheet" href="../styles.css">
+    <style>/* styles.css */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #111;
+    color: #BBB;
+}
+
+header {
+    background-color: #302010;
+    color: #444;
+    padding: 20px;
+    text-align: center;
+}
+
+main {
+    padding: 20px;
+}
+
+h1, h2 {
+    color: #AAA;
+}
+
+p {
+    line-height: 1.6;
+}
+
+footer {
+    background-color: #302010;
+    color: #A0A0A0;
+    text-align: center;
+    padding: 5px;
+    position: sticky;
+    bottom: 0;
+    width: 100%;
+}
+.tab {
+    overflow: hidden;
+    border-bottom: 2px solid #ddd;
+    border-radius: 10px;
+}
+.tab button {
+    background-color: #4d220f; /* Dull orange */
+    color: #C0C0C0; /* White text */
+    float: left;
+    border: none;
+    outline: none;
+    cursor: pointer;
+    padding: 14px 16px;
+    transition: background-color 0.3s;
+    border-radius: 5%;
+}
+
+.tab button:hover {
+    background-color: #af4a20; /* Darker shade of orange on hover */
+}
+
+.tab button.active {
+    background-color: #ab481f; /* Darker shade of orange for active tab */
+}
+
+img {
+    border-radius: 30px;
+}</style>
     <link rel="icon" href="./Designer.png" type="image/png">
 </head>
     <header>
