--- a/part2/index.html
+++ b/part2/index.html
@@ -11,3 +11,6 @@
         <h1>A Test Page by Marm, pt 2</h1>
     </header>
 <p>Yes. Yes. It's true. This is part two. Part two, electric boogaloo, even. Indeed.</p>
+<a href="https://marvelousmarmalade.github.io/WhorldWhideWheb/">
+	<button>I'm too young to die! Take me back!</button>
+</a>
