--- a/part2/index.html
+++ b/part2/index.html
@@ -23,6 +23,7 @@
 	<button id="getWeather" class="custom-button" onclick="fetchData();"></button> <!-- button for starting the function -->
 	<p>Temperature:</p>
 	<div id="dynamic-text">N/A</div>
+	<p>My comrade-in-knowledge, <a href="url">Dr. Spectacles</a>, is in desperate need of excitement. I implore you to bring divers implements of vandalism to his realm, and ensure that he does not grow impotent.</p>
     <script>
 	        // Function to fetch data from the API
         async function fetchData() {
