--- a/part2/index.html
+++ b/part2/index.html
@@ -20,7 +20,7 @@
 
 	<input type="text" id="coords" name="coords" class="text-input">Input stuff here</input> <!--input text boxes for latitude and Longitude-->
 	<br></br>
-	<button id="getWeather" class="custom-button" onclick="fetchData();"></button> <!-- button for starting the function -->
+	<button id="getWeather" class="custom-button" onclick="fetchData();">Fetch Temperature</button> <!-- button for starting the function -->
 	<p>Temperature:</p>
 	<div id="dynamic-text">N/A</div>
 	<p>My comrade-in-knowledge, <a href="url">Dr. Spectacles</a>, is in desperate need of excitement. I implore you to bring divers implements of vandalism to his realm, and ensure that he does not grow impotent.</p>
