--- a/part2/index.html
+++ b/part2/index.html
@@ -18,7 +18,7 @@
 	<br></br>
 
 
-	<input type="text" id="coords" name="coords" class="text-input">Input stuff here</input> <!--input text boxes for latitude and Longitude-->
+	<input type="text" id="coords" name="coords" class="text-input">   Input coords here</input> <!--input text boxes for latitude and Longitude-->
 	<br></br>
 	<button id="getWeather" class="custom-button" onclick="fetchData();">Fetch Temperature</button> <!-- button for starting the function -->
 	<p>Temperature:</p>
